# ogma

./: .travis.yml  README.md  cabal.project
ogma-cli/: .hlint.yaml  CHANGELOG.md  README.md  ogma-cli.cabal
ogma-cli/examples/: cfs-variable-db  cfs-variable-db.json  cfs-variables  diagram-copilot.dot  diagram-inputs.dot  fcs-1.json  fcs-3-small.json  fdb-2.json  fret-reqs-small-main.c  fret-reqs-small.json  mermaid-copilot.txt  mermaid-inputs.txt  mermaid-smv.txt  point.h
ogma-cli/examples/cfs-001-hello-ogma/: README.md  db.json  expressions.json  extra-vars.json  extra.h
ogma-cli/examples/diagram-001-hello-ogma/: README.md  diagram-copilot.dot  main.c
ogma-cli/examples/ros-copilot/: ROS.hs  document.json  handlers  json-format.cfg  variables  vars-db  vars-db.json
ogma-cli/examples/ros2-001-hello-ogma/: README.md  db.json  expressions.json  json-format.cfg
ogma-cli/src/: Main.hs
ogma-cli/src/CLI/: CommandCFSApp.hs  CommandCStructs2Copilot.hs  CommandCStructs2MsgHandlers.hs  CommandDiagram.hs  CommandFPrimeApp.hs  CommandFretComponentSpec2Copilot.hs  CommandFretComponentSpec2R2U2.hs  CommandFretReqsDB2Copilot.hs  CommandLustre2Copilot.hs  CommandOverview.hs  CommandROSApp.hs  CommandReport.hs  CommandStandalone.hs  CommandTop.hs  CommandXMLSpec2Copilot.hs  Result.hs
ogma-cli/tests/: Main.hs  commands-fret-error-parsing-failed-2.json  fret-example1.json
ogma-core/: .hlint.yaml  CHANGELOG.md  ogma-core.cabal
ogma-core/data/: variable-db.json
ogma-core/data/formats/: fcs_cocospec  fcs_lustre  fcs_smv  fdb_cocospec  fdb_lustre  fdb_smv  xml-md_cocospec  xml-md_lustre  xml-reqif_lustre  xml-reqif_smv
ogma-core/src/Command/: CFSApp.hs  CStructs2Copilot.hs  CStructs2MsgHandlers.hs  Common.hs  Diagram.hs  Errors.hs  FPrimeApp.hs  FRETComponentSpec2Copilot.hs  FRETComponentSpec2R2U2.hs  FRETReqsDB2Copilot.hs  Lustre2Copilot.hs  Overview.hs  ROSApp.hs  Report.hs  Result.hs  Standalone.hs  VariableDB.hs  XMLSpec2Copilot.hs
ogma-core/src/Data/: Location.hs
ogma-core/src/Language/Trans/: CStruct2CopilotStruct.hs  CStructs2Copilot.hs  CStructs2MsgHandlers.hs  CoCoSpec2Copilot.hs  CoCoSpec2R2U2.hs  FRETComponentSpec2Copilot.hs  FRETComponentSpec2R2U2.hs  FRETReqsDB2Copilot.hs  Lustre2Copilot.hs  SMV2Copilot.hs  SMV2R2U2.hs  Spec2Copilot.hs
ogma-core/templates/copilot-cfs/: .gitignore  CMakeLists.txt
ogma-core/templates/copilot-cfs/fsw/for_build/: Makefile
ogma-core/templates/diagram/: Copilot.hs
ogma-core/templates/fprime/: CMakeLists.txt  Copilot.cpp  Copilot.fpp  Copilot.hpp  Dockerfile  instance-copilot
ogma-core/templates/ros/: CMakeLists.txt  Dockerfile  screenrc
ogma-core/templates/ros/copilot/: CMakeLists.txt  package.xml
ogma-core/templates/ros/test_requirements/: CMakeLists.txt  package.xml
ogma-core/templates/standalone/: Copilot.hs
ogma-core/tests/: Main.hs  commands-fret-error-parsing-failed-1.json  commands-fret-error-parsing-failed-3.json  fret_good.json  reduced_geofence_msgs_bad.h
ogma-extra/: CHANGELOG.md  ogma-extra.cabal
ogma-extra/src/Data/ByteString/: Extra.hs
ogma-extra/src/Data/List/: Extra.hs
ogma-extra/src/Data/String/: Extra.hs
ogma-extra/src/System/Directory/: Extra.hs
ogma-extra/tests/: Main.hs
ogma-language-c/: .gitignore  .hlint.yaml  CHANGELOG.md  Setup.hs  ogma-language-c.cabal
ogma-language-c/grammar/: C.cf
ogma-language-c/tests/: Main.hs  reduced_geofence_msgs.h
ogma-language-copilot/: .gitignore  CHANGELOG.md  Setup.hs  ogma-language-copilot.cabal
ogma-language-copilot/grammar/: Copilot.cf
ogma-language-copilot/src/Language/Copilot/: AST.hs  CStruct.hs  Pretty.hs  PrintCopilot.hs  PrintCopilotNew.hs
ogma-language-jsonspec/: CHANGELOG.md  ogma-language-jsonspec.cabal
ogma-language-jsonspec/src/Language/JSONSpec/: Parser.hs
ogma-language-lustre/: .gitignore  .hlint.yaml  CHANGELOG.md  Setup.hs  ogma-language-lustre.cabal
ogma-language-lustre/grammar/: Lustre.cf
ogma-language-lustre/tests/: Main.hs  lustre_good
ogma-language-smv/: .gitignore  .hlint.yaml  CHANGELOG.md  Setup.hs  ogma-language-smv.cabal
ogma-language-smv/grammar/: SMV.cf
ogma-language-smv/src/Language/SMV/: Substitution.hs
ogma-language-smv/tests/: Main.hs  smv_bad  smv_good
ogma-language-xmlspec/: CHANGELOG.md  ogma-language-xmlspec.cabal
ogma-language-xmlspec/src/Language/XMLSpec/: Parser.hs  PrintTrees.hs
ogma-spec/: CHANGELOG.md  ogma-spec.cabal
ogma-spec/src/Data/: OgmaSpec.hs
updated_template/{{app_name_lc}}/: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md  arch_build.cmake  mission_build.cmake
updated_template/{{app_name_lc}}/config/: default_{{app_name_lc}}_fcncodes.h  default_{{app_name_lc}}_interface_cfg.h  default_{{app_name_lc}}_internal_cfg.h  default_{{app_name_lc}}_mission_cfg.h  default_{{app_name_lc}}_msg.h  default_{{app_name_lc}}_msgdefs.h  default_{{app_name_lc}}_msgids.h  default_{{app_name_lc}}_msgstruct.h  default_{{app_name_lc}}_perfids.h  default_{{app_name_lc}}_platform_cfg.h  default_{{app_name_lc}}_tbl.h  default_{{app_name_lc}}_tbldefs.h  default_{{app_name_lc}}_tblstruct.h  default_{{app_name_lc}}_topicids.h
updated_template/{{app_name_lc}}/eds/: {{app_name_lc}}.xml
updated_template/{{app_name_lc}}/fsw/inc/: {{app_name_lc}}_eventids.h
updated_template/{{app_name_lc}}/fsw/src/: Properties.hs  {{app_name_lc}}.c  {{app_name_lc}}.h  {{app_name_lc}}_cmds.c  {{app_name_lc}}_cmds.h  {{app_name_lc}}_dispatch.c  {{app_name_lc}}_dispatch.h  {{app_name_lc}}_eds_dispatch.c  {{app_name_lc}}_utils.c  {{app_name_lc}}_utils.h  {{app_name_lc}}_version.h
updated_template/{{app_name_lc}}/fsw/tables/: {{app_name_lc}}_tbl.c
updated_template/{{app_name_lc}}/unit-test/: CMakeLists.txt
updated_template/{{app_name_lc}}/unit-test/common/: eventcheck.c  eventcheck.h  setup.c  setup.h
updated_template/{{app_name_lc}}/unit-test/coveragetest/: coveragetest_{{app_name_lc}}.c  coveragetest_{{app_name_lc}}_cmds.c  coveragetest_{{app_name_lc}}_dispatch.c  coveragetest_{{app_name_lc}}_eds_dispatch.c  coveragetest_{{app_name_lc}}_utils.c  {{app_name_lc}}_coveragetest_common.h
(+46 files in other folders)
