-- Copyright 2020 United States Government as represented by the Administrator
-- of the National Aeronautics and Space Administration. All Rights Reserved.
--
-- Disclaimers
--
-- No Warranty: THE SUBJECT SOFTWARE IS PROVIDED "AS IS" WITHOUT ANY WARRANTY
-- OF ANY KIND, EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT
-- LIMITED TO, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL CONFORM TO
-- SPECIFICATIONS, ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
-- PARTICULAR PURPOSE, OR FREEDOM FROM INFRINGEMENT, ANY WARRANTY THAT THE
-- SUBJECT SOFTWARE WILL BE ERROR FREE, OR ANY WARRANTY THAT DOCUMENTATION, IF
-- PROVIDED, WILL CONFORM TO THE SUBJECT SOFTWARE. THIS AGREEMENT DOES NOT, IN
-- ANY MANNER, CONSTITUTE AN ENDORSEMENT BY GOVERNMENT AGENCY OR ANY PRIOR
-- RECIPIENT OF ANY RESULTS, RESULTING DESIGNS, HARDWARE, SOFTWARE PRODUCTS OR
-- ANY OTHER APPLICATIONS RESULTING FROM USE OF THE SUBJECT SOFTWARE. FURTHER,
-- GOVERNMENT AGENCY DISCLAIMS ALL WARRANTIES AND LIABILITIES REGARDING
-- THIRD-PARTY SOFTWARE, IF PRESENT IN THE ORIGINAL SOFTWARE, AND DISTRIBUTES
-- IT "AS IS." 
--
-- Waiver and Indemnity: RECIPIENT AGREES TO WAIVE ANY AND ALL CLAIMS AGAINST
-- THE UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS
-- ANY PRIOR RECIPIENT. IF RECIPIENT'S USE OF THE SUBJECT SOFTWARE RESULTS IN
-- ANY LIABILITIES, DEMANDS, DAMAGES, EXPENSES OR LOSSES ARISING FROM SUCH USE,
-- INCLUDING ANY DAMAGES FROM PRODUCTS BASED ON, OR RESULTING FROM, RECIPIENT'S
-- USE OF THE SUBJECT SOFTWARE, RECIPIENT SHALL INDEMNIFY AND HOLD HARMLESS THE
-- UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS ANY
-- PRIOR RECIPIENT, TO THE EXTENT PERMITTED BY LAW. RECIPIENT'S SOLE REMEDY
-- FOR ANY SUCH MATTER SHALL BE THE IMMEDIATE, UNILATERAL TERMINATION OF THIS
-- AGREEMENT.

cabal-version:       2.0
build-type:          Simple

name:                ogma-core
version:             1.6.0
homepage:            https://github.com/nasa/ogma
bug-reports:         https://github.com/nasa/ogma/issues
license:             OtherLicense
license-file:        LICENSE.pdf
author:              Ivan Perez, Alwyn Goodloe
maintainer:          ivan.perezdominguez@nasa.gov
category:            Aerospace
extra-source-files:  CHANGELOG.md

synopsis:            Ogma: Helper tool to interoperate between Copilot and other languages.

description:         Ogma is a tool to facilitate the integration of safe runtime monitors into
                     other systems. Ogma extends
                     <https://github.com/Copilot-Language/copilot Copilot>, a high-level runtime
                     verification framework that generates hard real-time C99 code.
                     .
                     This package implements the internal commands of ogma.

data-files:          templates/copilot-cfs/CMakeLists.txt
                     templates/copilot-cfs/fsw/for_build/Makefile
                     templates/copilot-cfs/fsw/mission_inc/copilot_cfs_perfids.h
                     templates/copilot-cfs/fsw/platform_inc/copilot_cfs_msgids.h
                     templates/copilot-cfs/fsw/src/Properties.hs
                     templates/copilot-cfs/fsw/src/copilot_cfs_msg.h
                     templates/copilot-cfs/fsw/src/copilot_cfs.c
                     templates/copilot-cfs/fsw/src/copilot_cfs_version.h
                     templates/copilot-cfs/fsw/src/copilot_cfs.h
                     templates/copilot-cfs/fsw/src/copilot_cfs_events.h
                     templates/ros/Dockerfile
                     templates/ros/copilot/CMakeLists.txt
                     templates/ros/copilot/src/copilot_logger.cpp
                     templates/ros/copilot/src/copilot_monitor.cpp
                     templates/ros/copilot/package.xml
                     templates/diagram/Copilot.hs
                     templates/fprime/CMakeLists.txt
                     templates/fprime/Copilot.cpp
                     templates/fprime/Copilot.fpp
                     templates/fprime/Copilot.hpp
                     templates/fprime/Dockerfile
                     templates/fprime/instance-copilot
                     templates/standalone/Copilot.hs
                     data/formats/fcs_smv
                     data/formats/fcs_cocospec
                     data/formats/fdb_smv
                     data/formats/fdb_cocospec
                     data/formats/xml-md_cocospec
                     data/formats/xml-md_smv
                     data/formats/xml-reqif_cocospec
                     data/formats/xml-reqif_smv

-- Ogma packages should be uncurated so that only the official maintainers make
-- changes.
--
-- Because this is a NASA project, we want to make sure that users obtain
-- exactly what we publish, unmodified by anyone external to our project.
x-curation: uncurated

source-repository head
  type:     git
  location: git@github.com:nasa/ogma.git
  subdir:   ogma-core

library

  exposed-modules:
    Command.CFSApp
    Command.CStructs2Copilot
    Command.CStructs2MsgHandlers
    Command.Diagram
    Command.FPrimeApp
    Command.Result
    Command.ROSApp
    Command.Standalone

    Data.Location

    Language.Trans.CoCoSpec2Copilot
    Language.Trans.CStruct2CopilotStruct
    Language.Trans.CStructs2Copilot
    Language.Trans.CStructs2MsgHandlers
    Language.Trans.Spec2Copilot
    Language.Trans.SMV2Copilot

  other-modules:
    Paths_ogma_core

  autogen-modules:
    Paths_ogma_core

  build-depends:
      base                    >= 4.11.0.0 && < 5
    , aeson                   >= 2.0.0.0  && < 2.2
    , bytestring              >= 0.10.8.2 && < 0.13
    , containers              >= 0.5      && < 0.8
    , directory               >= 1.3.1.5  && < 1.4
    , filepath                >= 1.4.2    && < 1.6
    , graphviz                >= 2999.20  && < 2999.21
    , megaparsec              >= 8.0.0    && < 9.10
    , mtl                     >= 2.2.2    && < 2.4
    , process                 >= 1.6      && < 1.7
    , text                    >= 1.2.3.1  && < 2.1

    , ogma-extra              >= 1.6.0 && < 1.7
    , ogma-language-c         >= 1.6.0 && < 1.7
    , ogma-language-cocospec  >= 1.6.0 && < 1.7
    , ogma-language-copilot   >= 1.6.0 && < 1.7
    , ogma-language-jsonspec  >= 1.6.0 && < 1.7
    , ogma-language-smv       >= 1.6.0 && < 1.7
    , ogma-language-xmlspec   >= 1.6.0 && < 1.7
    , ogma-spec               >= 1.6.0 && < 1.7

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  ghc-options:
    -Wall

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  build-depends:
      base                       >= 4.11.0.0 && < 5
    , directory                  >= 1.3.1.5  && < 1.4
    , HUnit                      >= 1.2.0.0  && < 1.7
    , QuickCheck                 >= 2.8.2    && < 2.16
    , test-framework             >= 0.8.2    && < 0.9
    , test-framework-hunit       >= 0.2.0    && < 0.4
    , test-framework-quickcheck2 >= 0.3.0.4  && < 0.4

    , ogma-core

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
