-- Copyright 2024 United States Government as represented by the Administrator
-- of the National Aeronautics and Space Administration. All Rights Reserved.
--
-- Disclaimers
--
-- Licensed under the Apache License, Version 2.0 (the "License"); you may
-- not use this file except in compliance with the License. You may obtain a
-- copy of the License at
--
--      https://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-- License for the specific language governing permissions and limitations
-- under the License.

cabal-version:       2.0
build-type:          Simple

name:                ogma-language-jsonspec
version:             1.9.0
homepage:            https://github.com/nasa/ogma
bug-reports:         https://github.com/nasa/ogma/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Ivan Perez, Alwyn Goodloe
maintainer:          ivan.perezdominguez@nasa.gov
category:            Aerospace
extra-source-files:  CHANGELOG.md

synopsis:            Ogma: Runtime Monitor translator: JSON Frontend

description:         Ogma is a tool to facilitate the integration of safe runtime monitors into
                     other systems. Ogma extends
                     <https://github.com/Copilot-Language/copilot Copilot>, a high-level runtime
                     verification framework that generates hard real-time C99 code.
                     .
                     This library contains a frontend to read specifications from JSON files.

-- Ogma packages should be uncurated so that only the official maintainers make
-- changes.
--
-- Because this is a NASA project, we want to make sure that users obtain
-- exactly what we publish, unmodified by anyone external to our project.
x-curation: uncurated

source-repository head
  type:     git
  location: git@github.com:nasa/ogma.git
  subdir:   ogma-language-jsonspec

library

  exposed-modules:
    Language.JSONSpec.Parser

  build-depends:
      base                   >= 4.11.0.0 && < 5
    , aeson                  >= 2.0.0.0  && < 2.3
    , jsonpath               >= 0.3      && < 0.4
    , text                   >= 1.2.3.1  && < 2.2
    , megaparsec             >= 8.0.0    && < 9.10
    , mtl                    >= 2.2.2    && < 2.4
    , bytestring             >= 0.10.8.2 && < 0.13

    , ogma-spec              >= 1.9.0 && < 1.10

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  ghc-options:
    -Wall
