-- Copyright 2020 United States Government as represented by the Administrator
-- of the National Aeronautics and Space Administration. All Rights Reserved.
--
-- Disclaimers
--
-- No Warranty: THE SUBJECT SOFTWARE IS PROVIDED "AS IS" WITHOUT ANY WARRANTY
-- OF ANY KIND, EITHER EXPRESSED, IMPLIED, OR STATUTORY, INCLUDING, BUT NOT
-- LIMITED TO, ANY WARRANTY THAT THE SUBJECT SOFTWARE WILL CONFORM TO
-- SPECIFICATIONS, ANY IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
-- PARTICULAR PURPOSE, OR FREEDOM FROM INFRINGEMENT, ANY WARRANTY THAT THE
-- SUBJECT SOFTWARE WILL BE ERROR FREE, OR ANY WARRANTY THAT DOCUMENTATION, IF
-- PROVIDED, WILL CONFORM TO THE SUBJECT SOFTWARE. THIS AGREEMENT DOES NOT, IN
-- ANY MANNER, CONSTITUTE AN ENDORSEMENT BY GOVERNMENT AGENCY OR ANY PRIOR
-- RECIPIENT OF ANY RESULTS, RESULTING DESIGNS, HARDWARE, SOFTWARE PRODUCTS OR
-- ANY OTHER APPLICATIONS RESULTING FROM USE OF THE SUBJECT SOFTWARE. FURTHER,
-- GOVERNMENT AGENCY DISCLAIMS ALL WARRANTIES AND LIABILITIES REGARDING
-- THIRD-PARTY SOFTWARE, IF PRESENT IN THE ORIGINAL SOFTWARE, AND DISTRIBUTES
-- IT "AS IS."
--
-- Waiver and Indemnity: RECIPIENT AGREES TO WAIVE ANY AND ALL CLAIMS AGAINST
-- THE UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS
-- ANY PRIOR RECIPIENT. IF RECIPIENT'S USE OF THE SUBJECT SOFTWARE RESULTS IN
-- ANY LIABILITIES, DEMANDS, DAMAGES, EXPENSES OR LOSSES ARISING FROM SUCH USE,
-- INCLUDING ANY DAMAGES FROM PRODUCTS BASED ON, OR RESULTING FROM, RECIPIENT'S
-- USE OF THE SUBJECT SOFTWARE, RECIPIENT SHALL INDEMNIFY AND HOLD HARMLESS THE
-- UNITED STATES GOVERNMENT, ITS CONTRACTORS AND SUBCONTRACTORS, AS WELL AS ANY
-- PRIOR RECIPIENT, TO THE EXTENT PERMITTED BY LAW. RECIPIENT'S SOLE REMEDY
-- FOR ANY SUCH MATTER SHALL BE THE IMMEDIATE, UNILATERAL TERMINATION OF THIS
-- AGREEMENT.

cabal-version:       2.0
build-type:          Custom
name:                ogma-language-lustre
version:             1.7.0
homepage:            https://github.com/nasa/ogma
bug-reports:         https://github.com/nasa/ogma/issues
license:             OtherLicense
license-file:        LICENSE.pdf
author:              Ivan Perez, Alwyn Goodloe
maintainer:          ivan.perezdominguez@nasa.gov
category:            Aerospace
extra-source-files:  CHANGELOG.md
                     grammar/Lustre.cf
                     src/.keep
                     tests/lustre_good
                     tests/lustre_bad

synopsis:            Ogma: Runtime Monitor translator: Lustre Language Frontend

description:         Ogma is a tool to facilitate the integration of safe runtime monitors into
                     other systems. Ogma extends
                     <https://github.com/Copilot-Language/copilot Copilot>, a high-level runtime
                     verification framework that generates hard real-time C99 code.
                     .
                     This library contains a frontend to read Lustre Boolean expressions,
                     extended with several operators related to temporal logic.

-- Ogma packages should be uncurated so that only the official maintainers make
-- changes.
--
-- Because this is a NASA project, we want to make sure that users obtain
-- exactly what we publish, unmodified by anyone external to our project.
x-curation: uncurated

source-repository head
  type:     git
  location: git@github.com:nasa/ogma.git
  subdir:   ogma-language-lustre

custom-setup
  setup-depends:
      base    >= 4.11.0.0 && < 5
    , Cabal   >= 2.0 && < 3.15
    , process >= 1.6      && < 1.7

library

  exposed-modules:
    -- Automatically generated
    Language.Lustre.AbsLustre
    Language.Lustre.LexLustre
    Language.Lustre.ParLustre
    Language.Lustre.PrintLustre

  autogen-modules:
    Language.Lustre.AbsLustre
    Language.Lustre.LexLustre
    Language.Lustre.ParLustre
    Language.Lustre.PrintLustre

  build-depends:
      base  >= 4.11.0.0 && < 5
    , array >= 0.5.2.0  && < 0.6

  build-tool-depends:
      alex:alex   >= 3
    , BNFC:bnfc   >= 2.9.4
    , happy:happy >= 1.19

  hs-source-dirs:
    src

  default-language:
    Haskell2010

test-suite unit-tests
  type:
    exitcode-stdio-1.0

  main-is:
    Main.hs

  build-depends:
      base                       >= 4.11.0.0 && < 5
    , QuickCheck                 >= 2.8.2    && < 2.16
    , test-framework             >= 0.8.2    && < 0.9
    , test-framework-quickcheck2 >= 0.3.0.4  && < 0.4

    , ogma-language-lustre

  hs-source-dirs:
    tests

  default-language:
    Haskell2010

  ghc-options:
    -Wall
