-- Copyright 2024 United States Government as represented by the Administrator
-- of the National Aeronautics and Space Administration. All Rights Reserved.
--
-- Disclaimers
--
-- Licensed under the Apache License, Version 2.0 (the "License"); you may
-- not use this file except in compliance with the License. You may obtain a
-- copy of the License at
--
--      https://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-- License for the specific language governing permissions and limitations
-- under the License.

cabal-version:       2.0
build-type:          Simple

name:                ogma-language-xmlspec
version:             1.11.0
homepage:            http://nasa.gov
license:             Apache-2.0
license-file:        LICENSE
author:              Ivan Perez, Alwyn Goodloe
maintainer:          ivan.perezdominguez@nasa.gov
category:            Aerospace
extra-source-files:  CHANGELOG.md

synopsis:            Ogma: Runtime Monitor translator: XML Frontend

description:         Ogma is a tool to facilitate the integration of safe runtime monitors into
                     other systems. Ogma extends
                     <https://github.com/Copilot-Language/copilot Copilot>, a high-level runtime
                     verification framework that generates hard real-time C99 code.
                     .
                     This library contains a frontend to read specifications from XML files.

-- Ogma packages should be uncurated so that only the official maintainers make
-- changes.
--
-- Because this is a NASA project, we want to make sure that users obtain
-- exactly what we publish, unmodified by anyone external to our project.
x-curation: uncurated

library

  exposed-modules:
    Language.XMLSpec.Parser
    Language.XMLSpec.PrintTrees

  build-depends:
      base                >= 4.11.0.0 && < 5
    , mtl                 >= 2.2.2    && < 2.4
    , hxt                 >= 9.3.1.4  && < 9.4
    , hxt-regex-xmlschema >= 9.0      && < 9.3
    , hxt-xpath           >= 8.5      && < 9.2
    , pretty              >= 1.1      && < 1.2

    , ogma-spec           >= 1.11.0 && < 1.12

  hs-source-dirs:
    src

  default-language:
    Haskell2010

  ghc-options:
    -Wall
